--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="page-header">
       <div class="container">
-      Контакты в шапке 
+      Контакты в шапке f[f[f[f[f[f]]]]] 
     </div>
     </header>
 
